fix show of listFight

--- a/src/View/fight/index.html.twig
+++ b/src/View/fight/index.html.twig
@@ -1,9 +1,11 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <ul>
-        {% for fight in fights %}
-         <li> {{ fight }} </li>
-        {% endfor %}
-    </ul>
+    {{ dump(fights) }}
+        <br>
+        <ul>
+            {% for fight in fights %}
+             <li> {{ fight.date}} => {{ fight.winner }}  </li>
+            {% endfor %}
+        </ul>
 {% endblock %}
