--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -1,5 +1,11 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Fight</h1>
+    <h1>BAKER STREET FIGHTER</h1>
+    
+{{getName playerOne}}
+{{getLife playerOne}}
+
+{{getName playerTwo}}
+{{getLife playerTwo}}
 {% endblock %}
