--- a/src/View/Fighters/fighterslist.html.twig
+++ b/src/View/Fighters/fighterslist.html.twig
@@ -2,10 +2,19 @@
 
 {% block content %}
     <h1>Fighters' List</h1>
-    <ul>
+    <section class="card-deck">
         {% for fighter in fighters %}
-            <li>Nom : {{fighter.name}} | Attaque : {{fighter.attack}}  | Défense : {{fighter.defense}}</li>
-            <img src="/assets/images/{{fighter.name|lower}}.png">
+            <figure class="card-fighter">
+            <img
+             class="card-img"
+             src="/assets/images/{{fighter.name|lower}}.png"
+            />
+            <figcaption class="card-caption">
+            <h2>{{fighter.name}}</h2>
+            <p>Attack : {{fighter.attack}}</p>
+            <p>Defence : {{fighter.defense}}</p>
+            </figcaption>
+            </figure>
         {% endfor %}
-    </ul>
+    </section>
 {% endblock %}
