added life data

--- a/src/View/Fighters/fighterslist.html.twig
+++ b/src/View/Fighters/fighterslist.html.twig
@@ -10,9 +10,10 @@
              src="/assets/images/{{fighter.name|lower}}.png"
             />
             <figcaption class="card-caption">
-            <h2>{{fighter.name}}</h2>
-            <p>Attack : {{fighter.attack}}</p>
-            <p>Defence : {{fighter.defense}}</p>
+                <h2>{{fighter.name}}</h2>
+                <p>Attack : {{fighter.attack}}</p>
+                <p>Defence : {{fighter.defense}}</p>
+                <p>Life : 100</p>
             </figcaption>
             </figure>
         {% endfor %}
