--- a/src/View/Fighters/fighterslist.html.twig
+++ b/src/View/Fighters/fighterslist.html.twig
@@ -1,19 +1,18 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Fighters' List</h1>
+    <h1 class"fighterListTitle">Fighters List</h1>
     <section class="card-deck">
         {% for fighter in fighters %}
             <figure class="card-fighter">
             <img
              class="card-img"
              src="/assets/images/{{fighter.name|lower}}.png"
+             alt="{{fighter.name}} photo"
             />
             <figcaption class="card-caption">
                 <h2>{{fighter.name}}</h2>
-                <p>Attack : {{fighter.attack}}</p>
-                <p>Defence : {{fighter.defense}}</p>
-                <p>Life : 100</p>
+                <p>Attack : {{fighter.attack}}<br>Defence : {{fighter.defense}}<br>Life : 100</p>
             </figcaption>
             </figure>
         {% endfor %}
