--- a/src/View/Fighters/fighterslist.html.twig
+++ b/src/View/Fighters/fighterslist.html.twig
@@ -11,8 +11,8 @@
              alt="{{fighter.name}} photo"
             />
             <figcaption class="card-caption">
-                <h2>{{fighter.name}}</h2>
-                <p>Attack : {{fighter.attack}}<br>Defence : {{fighter.defense}}<br>Life : 100</p>
+                <h2 class="card-fighter-name">{{fighter.name}}</h2>
+                <p class="card-fighter-skills">Attack : {{fighter.attack}}<br>Defence : {{fighter.defense}}<br>Life : 100</p>
             </figcaption>
             </figure>
         {% endfor %}
