added class for stylizing name fighter on cards

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,7 +32,9 @@ body {
 
 /* END FIGHT|HISTORY */
 /* PICK LIST|FIGHTER*/
-
+.fighterListTitle {
+    text-align: center;
+}
 .card-deck {
     text-align: center;
 }
