--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    {% include 'navbar.html.twig' %}
     {% block content %}{% endblock %}
     {% block javascript %}{% endblock %}
 </body>
