--- a/src/View/Item/navbar.html.twig
+++ b/src/View/Item/navbar.html.twig
@@ -1,7 +1,9 @@
-<nav>
-        <div class="main_pages">
-            <a href="#">Home</a>
-            <a href="#">Fighters List</a>
-            <a href="#">Fights History</a>
-        </div>
-    </nav>
+<nav class="navbar">
+    <label>☰</label>
+    <input type="checkbox" id="toggle">
+    <div class="menu">
+        <a href="#">Home</a>
+        <a href="#">Fighters List</a>
+        <a href="#">Fights History</a>
+    </div>
+</nav>
