--- a/src/View/Item/navbar.html.twig
+++ b/src/View/Item/navbar.html.twig
@@ -1,8 +1,6 @@
 <nav class="navbar">
-    <label>☰</label>
-    <input type="checkbox" id="toggle">
     <div class="menu">
-        <a href="#">Home</a>
+        <a href="#">Fight</a>
         <a href="#">Fighters List</a>
         <a href="#">Fights History</a>
     </div>
