changed model of navbar for homepage

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Hello Wilder !</h1>
+    <h1>Baker Street Fighter</h1>
+    <section class="menu-home">
+    {% include 'Item/navbar.html.twig' %}
+    </section>
 {% endblock %}
