--- a/src/View/Item/navbar.html.twig
+++ b/src/View/Item/navbar.html.twig
@@ -1,7 +1,8 @@
 <nav class="navbar">
-    <div class="menu">
-        <a href="#">Fight</a>
-        <a href="#">Fighters List</a>
-        <a href="#">Fights History</a>
-    </div>
+    <ul class="menu">
+        <li><a href="#">Fight</a></li>
+        <li><a href="#">Fighters List</a></li>
+        <li><a href="#">Fights History</a></li>
+        <li><a href="#">Credits</a></li>
+    </ul>
 </nav>
