--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -2,10 +2,22 @@
 
 {% block content %}
     <h1>BAKER STREET FIGHTER</h1>
-    
-{{getName playerOne}}
-{{getLife playerOne}}
 
-{{getName playerTwo}}
-{{getLife playerTwo}}
+<div>    
+<img href='{{playerOne.getImage}}'>
+<p>{{playerOne.getName}} </p>
+</div>
+
+<div>
+<img href='{{playerTwo.getImage}}'>
+<p>{{PlayerTwo.getName}}</p>
+</div>
+
+{% for playerOne in playerOne and playerTwo in playerTwo %}
+    {% if playerOne.isAlive and playerTwo.isAlive %}
+        <p>{{ roundA|}}</p>
+        <p>{{ roundB|}}</p>
+    {% endif %}
+    {{ isWinner|}}
+{% endfor %}
 {% endblock %}
