--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Baker Street Fighter</h1>
+    <div class="home">
+        <h1 class="home-title">Baker<br> Street<br> Fighter<br></h1>
+    </div>
     {% include 'Item/navbar.html.twig' %}
 {% endblock %}
