--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -4,5 +4,9 @@
     <div class="home">
         <h1 class="home-title">Baker<br> Street<br> Fighter<br></h1>
     </div>
-    {% include 'Item/navbar.html.twig' %}
+    <div class="navbarfighter">
+        <img src="/assets/images/sherlock.png">
+        {% include 'Item/navbar.html.twig' %}
+        <img src="/assets/images/moriarty.png">
+    </div>
 {% endblock %}
