style fighters on home page

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -5,8 +5,8 @@
         <h1 class="home-title">Baker<br> Street<br> Fighter<br></h1>
     </div>
     <div class="navbarfighter">
-        <img src="/assets/images/sherlock.png">
+        <img class="img-home" src="/assets/images/sherlock.png" alt="sherlock image">
         {% include 'Item/navbar.html.twig' %}
-        <img src="/assets/images/moriarty.png">
+        <img class="img-home" src="/assets/images/moriarty.png" alt="moriarty image">
     </div>
 {% endblock %}
