--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,8 +19,9 @@ body {
 
 .navbar {
     display: flex;
-    justify-content: center;
+    align-items: flex-start;    
     text-decoration: none;
+    height: auto;
 }
 
 .menu {
@@ -31,6 +32,7 @@ body {
     width: 40vw;
     box-shadow: 5px 5px black;
     font-size: 1.5rem;
+    line-height: 2rem;
 }
 
 .menu-links {
@@ -47,14 +49,17 @@ body {
     font-size: 6rem;
     color: white;
     background-color: var(--primaryColor);
-    width: 35vh;
+    width: 40vh;
+    padding-left: 1rem;
     box-shadow: 5px 5px black;
 }
 .navbarfighter {
     display: flex;
     justify-content: center;
 }
-
+.img-home {
+    padding: 10px;
+}
 
 /* END HOME */
 /* PICK FIGHTER */
