--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -46,11 +46,12 @@ body {
     justify-content: center;
 }
 .home-title {
+    display: flex;
+    justify-content: center;
     font-size: 6rem;
     color: white;
     background-color: var(--primaryColor);
-    width: 40vh;
-    padding-left: 1rem;
+    padding: 1rem 2rem;
     box-shadow: 5px 5px black;
 }
 .navbarfighter {
