create table for display history fights

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,6 +73,14 @@ body {
 
 /* END WIN */
 /* PICK FIGHT|HISTORY*/
+.fightsTable {
+    display: flex;
+    justify-content: center;
+}
+
+.fightHistory {
+    border: 5px solid black;
+}
 
 /* END FIGHT|HISTORY */
 /* PICK LIST|FIGHTER*/
