--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -1,24 +1,19 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>BAKER STREET FIGHTER</h1>
+<section class='result'>
+    <div>
+        <img src="{{winner.image}}">
+        <p>Winner : {{winner.name}}</p>
+    </div>
 
-<div>    
-<img href='{{playerOne.getImage}}'>
-<p>{{playerOne.getName}} </p>
-</div>
+    <div>
+        <img src="{{loser.image}}">
+        <p> Loser : {{loser.name}}</p>
+    </div>
+    <div>
+    Won in {{round}} !! Elementary my dear !
+    </div>
+</section>
 
-<div>
-<img href='{{playerTwo.getImage}}'>
-<p>{{PlayerTwo.getName}}</p>
-</div>
-
-{% for playerOne in playerOne and playerTwo in playerTwo %}
-    {% if playerOne.isAlive and playerTwo.isAlive %}
-        <p>{{ roundA|}}</p>
-        <p>{{ roundB|}}</p>
-        <p>{{playerOne.getLife .' '. playerTwo.getLife}}
-    {% endif %}
-    {{ isWinner|}}
-{% endfor %}
 {% endblock %}
