index html twig updated

--- a/src/View/fight/index.html.twig
+++ b/src/View/fight/index.html.twig
@@ -13,8 +13,8 @@
             <tbody>
             {% for fight in fights %}
              <tr>
-                <td>{{ fight.date }}</td>
-                <td>{{ fight.name }}</td>
+                <td class="dateWinner">{{ fight.date }}</td>
+                <td class="nameWinner">{{ fight.name }}</td>
              </tr>
             {% endfor %}
             </tbody>
