--- a/src/View/Item/return.html.twig
+++ b/src/View/Item/return.html.twig
@@ -1,1 +1,1 @@
-<button class="returnButton" type="button" onclick="history.back()">⬅</button>
+<button class="returnButton" type="button" onclick="history.back()"><img src='/assets/images/button_return.png' alt='return button'></button>
