corrected position sticky to fixed

--- a/src/View/fight/index.html.twig
+++ b/src/View/fight/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
+{% include '/Item/return.html.twig'%}
     <h1>Fights History</h1>
     <section class="fightsTable">
         <table class="fightHistory">
