--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -1,6 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
+{% include '/Item/return.html.twig'%}
 <section class='result'>
     <div>
         <img src="{{winner.image}}">
