--- a/src/View/Item/navbar.html.twig
+++ b/src/View/Item/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <ul class="menu">
-        <li><a class="menu-links" href="#">Fight</a></li>
+        <li><a class="menu-links" href="/fight">Fight</a></li>
         <li><a class="menu-links" href="/fighters">Fighters List</a></li>
         <li><a class="menu-links" href="/fights">Fights History</a></li>
         <li><a class="menu-links" href="#">Credits</a></li>
