--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -4,13 +4,13 @@
 <section class='result'>
     <div class='winner'>
         <img src="/assets/images/{{winner.name|lower}}.png" class ="winnerImage">
-        <p>🏆: {{winner.name}} <br>❤ {{winner.getLife}}  <br>Atk: {{winner.getStrength}}<br>Def: {{winner.getDefense}}
+        <p>🏆: {{winner.name}} <br>❤ {{winner.life}}  <br>Atk: {{winner.strength}}<br>Def: {{winner.defense}}
         </p>
     </div>
 
     <div class='loser'>
         <img src="/assets/images/{{loser.name|lower}}.png" class ="loserImage">
-        <p>💀: {{loser.name}} <br>❤ {{loser.getLife}} <br>Atk: {{loser.getStrength}} <br>Def: {{loser.getDefense}}
+        <p>💀: {{loser.name}} <br>❤ {{loser.life}} <br>Atk: {{loser.strength}} <br>Def: {{loser.defense}}
         </p>
     </div>
 </section>
