center Title History

--- a/src/View/fight/index.html.twig
+++ b/src/View/fight/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% include '/Item/return.html.twig'%}
-    <h1>Fights History</h1>
+    <h1 class="fightsHistoryTitle">Fights History</h1>
     <section class="fightsTable">
         <table class="fightHistory">
             <thead class="tableHead">
