--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,6 +100,11 @@ body {
 
 /* END WIN */
 /* PICK FIGHT|HISTORY*/
+.fightsHistoryTitle {
+    display: flex;
+    justify-content: center;
+}
+
 .fightsTable {
     display: flex;
     justify-content: center;
