--- a/src/View/Item/navbar.html.twig
+++ b/src/View/Item/navbar.html.twig
@@ -3,6 +3,6 @@
         <li><a class="menu-links" href="#">Fight</a></li>
         <li><a class="menu-links" href="#">Fighters List</a></li>
         <li><a class="menu-links" href="#">Fights History</a></li>
-        <li><a class="menu-links" href="#">Credits</a></li>
+        <li><a class="menu-links" href="credits/credit">Credits</a></li>
     </ul>
 </nav>
