--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -8,9 +8,9 @@
     <li>Clément Moreaux</li>
     <li>Jordan Verreaux</li>
     <li>Bilal Amiche</li>
-    <li>Antoine Lelacart</li>
+    <li>Antoine Leclabart</li>
     <li>Théo Drouet</li>
-    <li>Robien Jonval</li>
+    <li>Robin Jonval</li>
 </ul>
 </div> 
 {% endblock content %}
