added return button on credits page

--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-
+{% include '/Item/return.html.twig'%}
 <div class="credit">
     <h1 Class="creditTitle">Crédits</h1>
 <ul>
