added 2 collab on credits page

--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -5,12 +5,14 @@
 <div class="credit">
     <h1 Class="creditTitle">Crédits</h1>
 <ul>
+    <li>Antoine Leclabart</li>
+    <li>Bilal Amiche</li>
     <li>Clément Moreaux</li>
     <li>Jordan Verreaux</li>
-    <li>Bilal Amiche</li>
-    <li>Antoine Leclabart</li>
-    <li>Théo Drouet</li>
+    <li>Marjorie Thomassin</li>
     <li>Robin Jonval</li>
+    <li>Romain Guillemot</li>
+    <li>Théo Drouet</li>
 </ul>
 </div> 
 {% endblock content %}
