--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -4,7 +4,7 @@
 {% include '/Item/return.html.twig'%}
 <div class="credit">
     <h1 Class="creditTitle">Crédits</h1>
-<ul>
+<ul class="creditList">
     <li>Antoine Leclabart</li>
     <li>Bilal Amiche</li>
     <li>Clément Moreaux</li>
