--- a/src/View/credits/credit.html.twig
+++ b/src/View/credits/credit.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 {% include '/Item/return.html.twig'%}
 <div class="credit">
-    <h1 Class="creditTitle">Crédits</h1>
+    <h1 Class="creditTitle">Credits</h1>
 <ul class="creditList">
     <li>Antoine Leclabart</li>
     <li>Bilal Amiche</li>
