modify the href of <a> in attack.html.twig

--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -16,6 +16,6 @@
 <section class='fightDetails'>
 </section>
 <div class='attackButton'>
-    <a href='fight.html.twig'>ATTACK !</a>
+    <a href='/fight'>ATTACK !</a>
 </div>
 {% endblock %}
