--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -95,7 +95,39 @@ body {
 
 /* END PICK FIGHTER */
 /* FIGHT|ARENA */
+.players {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    /* align-content: center; */
+    width: auto;
+    padding: 2rem;
+  }
+  .player {
+    padding: 1rem;
+    font-size: 1.7rem;
+    justify-content: center;
+  }
+  .playerImage{
+    height: 30vh;
+  }
+  .attackButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: 10rem;
+    background-color:#FE3535;
+    box-shadow: 5px 5px black;
+    margin: 4rem;
+  }
+  .attackButton a {
+    font-size: 4rem;
+    color: white;
+    padding: 0;
+    text-decoration: none;
 
+  }
 /* END FIGHT|ARENA */
 /* WIN */
 .result {
