--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -2,19 +2,19 @@
 
 {% block content %}
 <section class='players'>
-    <div class='player1'>
-        <img src="/assets/images/{{player1.name|lower}}.png" class ="player1Image">
+    <div class='player'>
+        <img src="/assets/images/{{player1.name|lower}}.png" class ="playerImage">
         <p> {{player1.name}} <br>❤ {{player1.life}}  <br>Atk: {{player1.attack}}<br>Def: {{player1.defense}}
         </p>
     </div>
-    <div class='player2'>
-        <img src="/assets/images/{{player2.name|lower}}.png" class ="player2Image">
+    <div class='player'>
+        <img src="/assets/images/{{player2.name|lower}}.png" class ="playerImage">
         <p> {{player2.name}} <br>❤ {{player2.life}}  <br>Atk: {{player2.attack}}<br>Def: {{player2.defense}}
         </p>
     </div>
 </section>
-<section class='fightDetails'>
-</section>
+{# <section class='fightDetails'>
+</section> #}
 <div class='attackButton'>
     <a href='/fight/damage'>ATTACK !</a>
 </div>
