modified database request with display number fight limit

--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -18,7 +18,7 @@
 <section class='fightDetails'>
     <div class='announce'>
     <p>K.O in {{round}} rounds !! Elementary my dear ! 🧐</p>
-    </pre>}}
+    </pre>
     </div>
     <div class='fightReview'>
     <p></p>
