--- a/src/View/Fight/attack.html.twig
+++ b/src/View/Fight/attack.html.twig
@@ -7,6 +7,7 @@
         <p> {{player1.name}} <br>❤ {{player1.life}}  <br>Atk: {{player1.attack}}<br>Def: {{player1.defense}}
         </p>
     </div>
+    <div class='player'>VS</div>
     <div class='player'>
         <img src="/assets/images/{{player2.name|lower}}.png" class ="playerImage">
         <p> {{player2.name}} <br>❤ {{player2.life}}  <br>Atk: {{player2.attack}}<br>Def: {{player2.defense}}
