added condition POST for return to home and session destroy at the end of a fight

--- a/src/View/Fight/fight.html.twig
+++ b/src/View/Fight/fight.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-{% include '/Item/return.html.twig'%}
+{% include '/Item/returnHome.html.twig'%}
 <section class='result'>
     <div class='winner'>
         <img src="/assets/images/{{winner.name|lower}}.png" class ="winnerImage">
