--- a/src/View/Item/returnHome.html.twig
+++ b/src/View/Item/returnHome.html.twig
@@ -1,3 +1,3 @@
-<form>
+<form action="" method="POST">
     <button class="returnButton" type="submit"><img src='/assets/images/button_return.png' alt='return button'></button>
 </form>
